--- a/app/templates/instructor/dashboard.html
+++ b/app/templates/instructor/dashboard.html
@@ -80,7 +80,7 @@
                     </a>
                     <a href="{{ url_for('instructor.messages') }}" class="list-group-item list-group-item-action">
                         <i class="fas fa-comments me-2"></i> Messages
-                        <span class="badge badge-pill badge-primary float-right">New</span>
+                        <span class="badge bg-primary rounded-pill">New</span>
                     </a>
                 </div>
             </div>
