--- a/app/templates/instructor/assignment_submissions.html
+++ b/app/templates/instructor/assignment_submissions.html
@@ -20,7 +20,7 @@
         <div class="col-12">
             <div class="card shadow">
                 <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Assignment Details</h6>
+                    <h6 class="m-0 fw-bold text-primary">Assignment Details</h6>
                 </div>
                 <div class="card-body">
                     <div class="row">
@@ -43,7 +43,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-12">
-                            <h6 class="font-weight-bold">Description:</h6>
+                            <h6 class="fw-bold">Description:</h6>
                             <div class="p-3 bg-light rounded">
                                 {{ assignment.description|safe }}
                             </div>
@@ -58,7 +58,7 @@
         <div class="col-12">
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Student Submissions</h6>
+                    <h6 class="m-0 fw-bold text-primary">Student Submissions</h6>
                 </div>
                 <div class="card-body">
                     {% if submission_data %}
@@ -80,9 +80,9 @@
                                     <td>{{ data.submission.submitted_at.strftime('%Y-%m-%d %H:%M') }}</td>
                                     <td>
                                         {% if data.submission.graded_at %}
-                                            <span class="badge badge-success">Graded</span>
+                                            <span class="badge bg-success">Graded</span>
                                         {% else %}
-                                            <span class="badge badge-warning">Pending</span>
+                                            <span class="badge bg-warning text-dark">Pending</span>
                                         {% endif %}
                                     </td>
                                     <td>
